.k8s/curd.api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-curd-api
  labels:
    app: curd-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curd-api
  template:
    metadata:
      labels:
        app: curd-api
    spec:
      containers:
      - name: curd-api
        image: thomrohit/restcrudapi:latest
        ports:
        - name: liveness-port
          containerPort: 8181
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "300Mi" #300 MB
            cpu: "300m" #300 millicpu (.3 cpu or 30% of the cpu)
        livenessProbe: # Checks every 30 secods if pod is healthy
          httpGet:
            path: /heathCheck
            port: liveness-port
          initialDelaySeconds: 30
          timeoutSeconds: 2
          periodSeconds: 30
          failureThreshold: 1
        readinessProbe: # Checks every 30 secods if pod is read to accept requests
          httpGet:
            path: /heathCheck
            port: liveness-port
          initialDelaySeconds: 60
          periodSeconds: 30
        startupProbe: # failureThreshold * periodSeconds = Total time given to a pod to start up --Cloud Providers takes time to start each pod and allocate resources
          httpGet:
            path: /heathCheck
            port: liveness-port
          failureThreshold: 30
          periodSeconds: 10    
        volumeMounts:
        - mountPath: "/opt/curd-api"
          name: "curd-api-vol"
      volumes:
      - name: "curd-api-vol"
        persistentVolumeClaim:
          claimName: "pvc-curd-api" 
      securityContext:
        supplementalGroups: [20000]
