.k8s/curd.api.service.lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-curd-api
  labels:
    app: curd-api
spec:
  type: LoadBalancer
  selector:
    app: curd-api
  ports:
  - name: http
    port: 8181
    targetPort: 8181
