.k8s/curd.api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
  - host: rest.curd.api.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-curd-api
            port:
              number: 5000
